syntax = "proto3";

package eservice.template.v2;

import "v2/eservice-template/eservice-template.proto";

message EServiceTemplateAddedV2 {
  EServiceTemplateV2 eserviceTemplate = 1;
}

message EServiceTemplateDraftUpdatedV2 {
  EServiceTemplateV2 eserviceTemplate = 1;
}

message EServiceTemplateDraftVersionUpdatedV2 {
  string eserviceTemplateVersionId = 1;
  EServiceTemplateV2 eserviceTemplate = 2;
}

message EServiceTemplateDraftVersionDeletedV2 {
  string eserviceTemplateVersionId = 1;
  EServiceTemplateV2 eserviceTemplate = 2;
}

message EServiceTemplateDeletedV2 {
  EServiceTemplateV2 eserviceTemplate = 1;
}

message EServiceTemplateVersionInterfaceAddedV2 {
  string eserviceTemplateVersionId = 1;
  string documentId = 2;
  EServiceTemplateV2 eserviceTemplate = 3;
}

message EServiceTemplateVersionDocumentAddedV2 {
  string eserviceTemplateVersionId = 1;
  string documentId = 2;
  EServiceTemplateV2 eserviceTemplate = 3;
}

message EServiceTemplateVersionInterfaceDeletedV2 {
  string eserviceTemplateVersionId = 1;
  string documentId = 2;
  EServiceTemplateV2 eserviceTemplate = 3;
}

message EServiceTemplateVersionDocumentDeletedV2 {
  string eserviceTemplateVersionId = 1;
  string documentId = 2;
  EServiceTemplateV2 eserviceTemplate = 3;
}

message EServiceTemplateVersionInterfaceUpdatedV2 {
  string eserviceTemplateVersionId = 1;
  string documentId = 2;
  EServiceTemplateV2 eserviceTemplate = 3;
}

message EServiceTemplateVersionDocumentUpdatedV2 {
  string eserviceTemplateVersionId = 1;
  string documentId = 2;
  EServiceTemplateV2 eserviceTemplate = 3;
}

message EServiceTemplateVersionPublishedV2 {
  string eserviceTemplateVersionId = 1;
  EServiceTemplateV2 eserviceTemplate = 2;
}

message EServiceTemplateNameUpdatedV2 {
  EServiceTemplateV2 eserviceTemplate = 1;
}

message EServiceTemplateIntendedTargetUpdatedV2 {
  EServiceTemplateV2 eserviceTemplate = 1;
}

message EServiceTemplateDescriptionUpdatedV2 {
  EServiceTemplateV2 eserviceTemplate = 1;
}

message EServiceTemplateVersionQuotasUpdatedV2 {
  string eserviceTemplateVersionId = 1;
  EServiceTemplateV2 eserviceTemplate = 2;
}

message EServiceTemplateVersionAddedV2 {
  string eserviceTemplateVersionId = 1;
  EServiceTemplateV2 eserviceTemplate = 2;
}

message EServiceTemplateVersionAttributesUpdatedV2 {
  string eserviceTemplateVersionId = 1;
  repeated string attributeIds = 2;
  EServiceTemplateV2 eserviceTemplate = 3;
}

message EServiceTemplateVersionSuspendedV2 {
  string eserviceTemplateVersionId = 1;
  EServiceTemplateV2 eserviceTemplate = 2;
}

message EServiceTemplateVersionActivatedV2 {
  string eserviceTemplateVersionId = 1;
  EServiceTemplateV2 eserviceTemplate = 2;
}

message EServiceTemplatePersonalDataFlagUpdatedAfterPublicationV2 {
  EServiceTemplateV2 eserviceTemplate = 1;
}
